B&L QA/objects/Price_Agreement_Product__c.object
<CustomObject>
    <description>EMEASU. Products in this pricing agreement.</description>
    <fields>
        <fullName>Adjusted_Price__c</fullName>
        <description>EMEA SU</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>EMEASU. The date the record was made inactive.</description>
        <inlineHelpText>If Inactive</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EMEASU. Has this product&apos;s agreement been end-dated / changed?</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Agreement__c</fullName>
        <description>The pricing agreement to which this product is related. EMEASU.</description>
        <label>Pricing Agreement</label>
        <referenceTo>Pricing_Agreement__c</referenceTo>
        <relationshipLabel>Price Agreement Products</relationshipLabel>
        <relationshipName>Price_Agreement_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>List of Surgical Level 4 Product Groups for (contractual) Price Agreements. Used by EMEA SU</description>
        <label>Product Group</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which the pricing agreement is attached (where appropriate)</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Agreement Products</relationshipLabel>
        <relationshipName>Price_Agreement_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>EMEA SU</description>
        <label>SKU</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Information__c</fullName>
        <description>Contains information such as account ship to id so that Price Agreement Products will return in global searches.</description>
        <label>Search Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Group__c</fullName>
        <description>Used by EMEA SU.</description>
        <label>Sub Product Group</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Unit of Measure. EMEASU.</description>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12F</fullName>
                </value>
                <value>
                    <fullName>1M</fullName>
                </value>
                <value>
                    <fullName>25F</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>B1K</fullName>
                </value>
                <value>
                    <fullName>BAL</fullName>
                </value>
                <value>
                    <fullName>BBL</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BIK</fullName>
                </value>
                <value>
                    <fullName>BIL</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>CG</fullName>
                </value>
                <value>
                    <fullName>CHN</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CMM</fullName>
                </value>
                <value>
                    <fullName>COI</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CUF</fullName>
                </value>
                <value>
                    <fullName>CUI</fullName>
                </value>
                <value>
                    <fullName>CUM</fullName>
                </value>
                <value>
                    <fullName>CUY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Agreement Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pricing_Agreement__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Sub_Product_Group__c</columns>
        <columns>SKU__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Adjusted_Price__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEASUContractManagers</group>
            <group>EMEASU_Tender_Office_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Price Set ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Agreement Products</pluralLabel>
    <recordTypes>
        <fullName>EMEASU_Price_Agreement_Product</fullName>
        <active>true</active>
        <description>EMEASU RT</description>
        <label>EMEASU Price Agreement Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>